# MusicTgBot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
client/: Client.cpp  Client.h
constants/: constants.cpp  constants.h
constants/messages/: AddPlistMessage.html  AddTracks.html  BadAnswer.html  CreatedPlist.html  ExistedPlistName.html  LargePlistName.html  LittleTrackName.html  OldData.html  PlistHeader.html  Plists_header.html  SelectYN(remove playlist).html  TrackHeader.html  WaitSendingToServer.html  WaitServerResponse.html  info.html  lockSection.html  welcome.html
constants/messages/playlist/: ExistedName.html  MaxCount.html  RenameMessage.html  UncorrectName.html
constants/messages/track/: ExistedName.html  LargeName.html  LittleName.html  MaxCount.html  RenameMessage.html  RenameName.html  SelectYN(remove).html
controller/: BotController.cpp  BotController.h
controller/botcontroller/: BotController.cpp  BotController.h
core/include/: HTML.h  parsers.h  userdata.h  validators.h
core/source/: HTML.cpp  parsers.cpp  userdata.cpp  validators.cpp
model/commands/include/: AnyCommands.h  Command.h  Command.inl  InlineCommands.h  MacroCommands.h
model/commands/source/: AnyCommands.cpp  Command.cpp  InlineCommands.cpp  MacroCommands.cpp
model/keyboards/: InlKeyboardFactory.cpp  InlKeyboardFactory.h
server/: CMakeLists.txt  main.cpp  script.bat
server/include/: Server.h  ServerConstants.h  ServerData.h  ServerOperations.h  ServerQueues.h  tempconstants.h
server/patterns/include/: TaskQueueWrapp.h
server/patterns/source/: TaskQueue.cpp  TaskQueueWrapp.cpp
server/scripts/: script.bat
server/source/: Server.cpp  ServerConstants.cpp  ServerData.cpp  ServerOperations.cpp  ServerQueues.cpp  TaskQueue.cpp  tempconstants.cpp
